--- a/generated_diagrams.html
+++ b/generated_diagrams.html
@@ -72,6 +72,16 @@
             "definition": [
               {
                 "type": "NonTerminal",
+                "name": "select",
+                "idx": 0
+              }
+            ]
+          },
+          {
+            "type": "Alternative",
+            "definition": [
+              {
+                "type": "NonTerminal",
                 "name": "boldText",
                 "idx": 0
               }
@@ -262,10 +272,67 @@
     "definition": [
       {
         "type": "Terminal",
-        "name": "Textbox",
-        "label": "Textbox",
+        "name": "Radio",
+        "label": "Radio",
         "idx": 0,
         "pattern": "radio"
+      },
+      {
+        "type": "Terminal",
+        "name": "LParen",
+        "label": "LParen",
+        "idx": 0,
+        "pattern": "\\("
+      },
+      {
+        "type": "Option",
+        "idx": 0,
+        "definition": [
+          {
+            "type": "NonTerminal",
+            "name": "value",
+            "idx": 0
+          },
+          {
+            "type": "Repetition",
+            "idx": 0,
+            "definition": [
+              {
+                "type": "Terminal",
+                "name": "SemiColon",
+                "label": "SemiColon",
+                "idx": 0,
+                "pattern": ";"
+              },
+              {
+                "type": "NonTerminal",
+                "name": "value",
+                "idx": 2
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "type": "Terminal",
+        "name": "RParen",
+        "label": "RParen",
+        "idx": 0,
+        "pattern": "\\)"
+      }
+    ]
+  },
+  {
+    "type": "Rule",
+    "name": "select",
+    "orgText": "",
+    "definition": [
+      {
+        "type": "Terminal",
+        "name": "Select",
+        "label": "Select",
+        "idx": 0,
+        "pattern": "select"
       },
       {
         "type": "Terminal",
